Update for 1.15.2 release

--- a/community/index.html
+++ b/community/index.html
@@ -65,9 +65,9 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="/community/"><span class="fa fa-users"></span></a></li>
                 <li class=""><a href="/docs/"><span class="fa fa-book"></span></a></li>
-                <li><a href="http://github.com/apache/geode" target="_blank"><span class="fa fa-github-square"></span></a></li>
+                <li><a href="https://github.com/apache/geode" target="_blank"><span class="fa fa-github-square"></span></a></li>
                 <li><a href="https://issues.apache.org/jira/browse/GEODE/" target="_blank"><span class="fa fa-bug"></span></a></li>
-                <li><a href="http://stackoverflow.com/search?q=Apache%20Geode" target="_blank"><span class="fa fa-stack-overflow"></span></a></li>
+                <li><a href="https://stackoverflow.com/search?q=Apache%20Geode" target="_blank"><span class="fa fa-stack-overflow"></span></a></li>
                 <li><a href="/community/#mailing-lists"><span class="fa fa-envelope"></span></a></li>
                 <li><a href="https://twitter.com/apachegeode" target="_blank"><span class="fa fa-twitter"></span></a></li>
                 <li><a href="https://cwiki.apache.org/confluence/display/geode/" target="_blank"><span class="fa fa-pencil-square-o"></span></a></li>
@@ -178,7 +178,7 @@ under the License. -->
 		</div>
 		<div class="row">
       <div class="col-md-4">
-        	<h3><a target="_blank" href="http://stackoverflow.com/search?q=Apache%20Geode">StackOverflow</a></h3>
+        	<h3><a target="_blank" href="https://stackoverflow.com/search?q=Apache%20Geode">StackOverflow</a></h3>
         	<p>The Geode team is always ready to answer questions on <a href="http://stackoverflow.com/search?q=Apache%20Geode">StackOverflow</a><p>
       </div>
       <div class="col-md-4">
@@ -229,7 +229,7 @@ under the License. -->
             </div>
             <div class="col-md-2">
                 <ul class="nav nav-list">
-                    <li class="nav-header"><a href="http://github.com/apache/geode" target="_blank">Code</a></li>
+                    <li class="nav-header"><a href="https://github.com/apache/geode" target="_blank">Code</a></li>
                     <li><a href="https://cwiki.apache.org/confluence/display/GEODE/Project+Proposals+and+Specifications" target="_blank">Specifications</a></li>
                     <li><a href="https://cwiki.apache.org/confluence/display/GEODE/Geode+Internal+Architecture" target="_blank">Internal Architecture</a></li>
                     <li><a href="https://cwiki.apache.org/confluence/display/GEODE/Writing+tests" target="_blank">Writing Tests</a></li>
@@ -239,10 +239,10 @@ under the License. -->
             <div class="col-md-2">
                 <ul class="nav nav-list">
                     <li class="nav-header">Resources</li>
-                    <li><a href="http://github.com/apache/geode" target="_blank">GitHub Code</a></li>
+                    <li><a href="https://github.com/apache/geode" target="_blank">GitHub Code</a></li>
                     <li><a href="/docs/">Docs</a></li>
                     <li><a href="https://issues.apache.org/jira/browse/GEODE" target="_blank">JIRA Bug Tracker</a></li>
-                    <li><a href="http://stackoverflow.com/search?q=Apache%20Geode" target="_blank">StackOverflow</a></li>
+                    <li><a href="https://stackoverflow.com/search?q=Apache%20Geode" target="_blank">StackOverflow</a></li>
                     <li><a href="/community/#live">Live Chat</a></li>
                     <li><a href="https://twitter.com/apachegeode" target="_blank">Twitter</a></li>
                     <li><a href="https://cwiki.apache.org/confluence/display/GEODE/Index#Index-Geodein5minutesGeodein5minutes" target="_blank">Geode in 5 minutes</a></li>
@@ -256,12 +256,12 @@ under the License. -->
             <div class="col-md-2">
                 <ul class="nav nav-list">
                     <li class="nav-header">Apache</li>
-                    <li><a href="http://www.apache.org/events/" target="_blank">Events</a></li>
-                    <li><a href="http://www.apache.org/licenses/" target="_blank">License</a></li>
-                    <li><a href="http://www.apache.org/foundation/sponsorship.html" target="_blank">Sponsorship</a></li>
-                    <li><a href="http://www.apache.org/foundation/thanks.html" target="_blank">Thanks</a></li>
-                    <li><a href="http://www.apache.org/security/">Security</a></li>
-                    <li><a href="http://www.apache.org/" target="_blank">Apache Foundation</a></li>
+                    <li><a href="https://www.apache.org/events/" target="_blank">Events</a></li>
+                    <li><a href="https://www.apache.org/licenses/" target="_blank">License</a></li>
+                    <li><a href="https://www.apache.org/foundation/sponsorship.html" target="_blank">Sponsorship</a></li>
+                    <li><a href="https://www.apache.org/foundation/thanks.html" target="_blank">Thanks</a></li>
+                    <li><a href="https://www.apache.org/security/">Security</a></li>
+                    <li><a href="https://www.apache.org/" target="_blank">Apache Foundation</a></li>
                 </ul>
             </div>
             <div class="col-md-4">
@@ -281,7 +281,7 @@ under the License. -->
         <div class="row">
           <center>
             <div id="copyright">
-                <a href="http://www.apache.org" target="_blank"><img src="/img/asf_logo.png" height="125"></a><br/><br/>
+                <a href="https://www.apache.org" target="_blank"><img src="/img/asf_logo.png" height="125"></a><br/><br/>
                 <p>Copyright © 2016 The Apache Software Foundation, Licensed under the Apache License, Version 2.0.<br>
                 Apache, Apache Geode, and the Apache feather logos are trademarks of The Apache Software Foundation.</p>
                 <p>Site designed & assembled with love by <a href="https://github.com/ryuneeee">@ryuneeee</a> + <a href="https://github.com/realbeast">@realbeast</a> + <a href="https://twitter.com/timanglade">@timanglade</a> + <a href="https://twitter.com/snoopdave">@snoopdave</a> for Apache Usergrid.</p>
