--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class=""><a href="/community/"><span class="fa fa-users"></span></a></li>
                 <li class=""><a href="/docs/"><span class="fa fa-book"></span></a></li>
-                <li><a href="http://github.com/apache/geode" target="_blank"><span class="fa fa-github-square"></span></a></li>
+                <li><a href="https://github.com/apache/geode" target="_blank"><span class="fa fa-github-square"></span></a></li>
                 <li><a href="https://issues.apache.org/jira/browse/GEODE/" target="_blank"><span class="fa fa-bug"></span></a></li>
-                <li><a href="http://stackoverflow.com/search?q=Apache%20Geode" target="_blank"><span class="fa fa-stack-overflow"></span></a></li>
+                <li><a href="https://stackoverflow.com/search?q=Apache%20Geode" target="_blank"><span class="fa fa-stack-overflow"></span></a></li>
                 <li><a href="/community/#mailing-lists"><span class="fa fa-envelope"></span></a></li>
                 <li><a href="https://twitter.com/apachegeode" target="_blank"><span class="fa fa-twitter"></span></a></li>
                 <li><a href="https://cwiki.apache.org/confluence/display/geode/" target="_blank"><span class="fa fa-pencil-square-o"></span></a></li>
@@ -101,12 +101,10 @@ under the License. -->
             <img class="logo-title img-responsive hidden-xs" src="img/Apache_Geode_logo.png" />
             <div class="text-container">
                 <h2 class="tagline"><em>Performance</em> is key. <em>Consistency</em> is a must.</h2>
-                <p class="description">Providing low latency, high concurrency data management solutions since 2002.<br/>
-                  <br/>Build high-speed, data-intensive applications that elastically meet performance requirements at any scale.<br/>
-                  Take advantage of Apache Geode's unique technology that blends advanced techniques for data replication, partitioning and distributed processing.
-
-                  <br/><br/>
-                  Apache Geode provides a database-like consistency model, reliable transaction processing and a shared-nothing architecture to maintain very low latency performance with high concurrency processing.<br/>
+                <p class="description">Providing low latency, high concurrency data management solutions since 2002.</p>
+                <p class="description">Build high-speed, data-intensive applications that elastically meet performance requirements at any scale.</p>
+				<p class="description">Take advantage of Apache Geode's unique technology that blends advanced techniques for data replication, partitioning and distributed processing.</p>
+				<p class="description">Apache Geode provides a database-like consistency model, reliable transaction processing, and a shared-nothing architecture to maintain very low latency performance with high concurrency processing.</p>
             </div>
 
             <div class="btn-wrapper">
@@ -213,12 +211,15 @@ under the License. -->
 </section>
 
 <section class="bf-questions">
-    <div class="container">
-            <div class="col-md-12 text-center cta">
-                And much more... Interested? You can check our <a href="https://cwiki.apache.org/confluence/display/GEODE/Index#Index-Geodein5minutesGeodein5minutes" target="_blank" class="btn btn-inverse btn-lg">Geode in 5 minutes tutorial</a> <span class="avoidwrap">, ask a question on the <a href="/community/" class="btn btn-inverse btn-lg">Mailing lists</a> or <a href="http://stackoverflow.com/search?q=Apache%20Geode" class="btn btn-inverse btn-lg">StackOverflow</a></span>
-            </div>
-    </div>
-</section
+  <div class="container">
+		<div class="col-md-12 text-center cta">
+			<h2>Ready to get started?</h2>
+			<p>Follow the tutorial</p>
+			<p><a href="https://cwiki.apache.org/confluence/display/GEODE/Index#Index-Geodein5minutesGeodein5minutes" class="btn btn-inverse btn-lg" target="_blank">Geode in five minutes</a></p>
+			<p>Or <a href="https://geode.apache.org/community/" title="Geode community resources">browse community resources</a>.</p>
+		</div>
+	</div>
+</section>
 
 <section class="bf-news">
     <div class="container">
@@ -252,7 +253,6 @@ Today Apache Geode technology is used by hundreds of enterprise customers for hi
     </div>
 </section>
 
-
 <footer class="bf-footer" role="contentinfo">
     <div class="container">
         <div class="row">
@@ -268,7 +268,7 @@ Today Apache Geode technology is used by hundreds of enterprise customers for hi
             </div>
             <div class="col-md-2">
                 <ul class="nav nav-list">
-                    <li class="nav-header"><a href="http://github.com/apache/geode" target="_blank">Code</a></li>
+                    <li class="nav-header"><a href="https://github.com/apache/geode" target="_blank">Code</a></li>
                     <li><a href="https://cwiki.apache.org/confluence/display/GEODE/Project+Proposals+and+Specifications" target="_blank">Specifications</a></li>
                     <li><a href="https://cwiki.apache.org/confluence/display/GEODE/Geode+Internal+Architecture" target="_blank">Internal Architecture</a></li>
                     <li><a href="https://cwiki.apache.org/confluence/display/GEODE/Writing+tests" target="_blank">Writing Tests</a></li>
@@ -278,10 +278,10 @@ Today Apache Geode technology is used by hundreds of enterprise customers for hi
             <div class="col-md-2">
                 <ul class="nav nav-list">
                     <li class="nav-header">Resources</li>
-                    <li><a href="http://github.com/apache/geode" target="_blank">GitHub Code</a></li>
+                    <li><a href="https://github.com/apache/geode" target="_blank">GitHub Code</a></li>
                     <li><a href="/docs/">Docs</a></li>
                     <li><a href="https://issues.apache.org/jira/browse/GEODE" target="_blank">JIRA Bug Tracker</a></li>
-                    <li><a href="http://stackoverflow.com/search?q=Apache%20Geode" target="_blank">StackOverflow</a></li>
+                    <li><a href="https://stackoverflow.com/search?q=Apache%20Geode" target="_blank">StackOverflow</a></li>
                     <li><a href="/community/#live">Live Chat</a></li>
                     <li><a href="https://twitter.com/apachegeode" target="_blank">Twitter</a></li>
                     <li><a href="https://cwiki.apache.org/confluence/display/GEODE/Index#Index-Geodein5minutesGeodein5minutes" target="_blank">Geode in 5 minutes</a></li>
@@ -295,12 +295,12 @@ Today Apache Geode technology is used by hundreds of enterprise customers for hi
             <div class="col-md-2">
                 <ul class="nav nav-list">
                     <li class="nav-header">Apache</li>
-                    <li><a href="http://www.apache.org/events/" target="_blank">Events</a></li>
-                    <li><a href="http://www.apache.org/licenses/" target="_blank">License</a></li>
-                    <li><a href="http://www.apache.org/foundation/sponsorship.html" target="_blank">Sponsorship</a></li>
-                    <li><a href="http://www.apache.org/foundation/thanks.html" target="_blank">Thanks</a></li>
-                    <li><a href="http://www.apache.org/security/">Security</a></li>
-                    <li><a href="http://www.apache.org/" target="_blank">Apache Foundation</a></li>
+                    <li><a href="https://www.apache.org/events/" target="_blank">Events</a></li>
+                    <li><a href="https://www.apache.org/licenses/" target="_blank">License</a></li>
+                    <li><a href="https://www.apache.org/foundation/sponsorship.html" target="_blank">Sponsorship</a></li>
+                    <li><a href="https://www.apache.org/foundation/thanks.html" target="_blank">Thanks</a></li>
+                    <li><a href="https://www.apache.org/security/">Security</a></li>
+                    <li><a href="https://www.apache.org/" target="_blank">Apache Foundation</a></li>
                 </ul>
             </div>
             <div class="col-md-4">
@@ -320,7 +320,7 @@ Today Apache Geode technology is used by hundreds of enterprise customers for hi
         <div class="row">
           <center>
             <div id="copyright">
-                <a href="http://www.apache.org" target="_blank"><img src="/img/asf_logo.png" height="125"></a><br/><br/>
+                <a href="https://www.apache.org" target="_blank"><img src="/img/asf_logo.png" height="125"></a><br/><br/>
                 <p>Copyright © 2016 The Apache Software Foundation, Licensed under the Apache License, Version 2.0.<br>
                 Apache, Apache Geode, and the Apache feather logos are trademarks of The Apache Software Foundation.</p>
                 <p>Site designed & assembled with love by <a href="https://github.com/ryuneeee">@ryuneeee</a> + <a href="https://github.com/realbeast">@realbeast</a> + <a href="https://twitter.com/timanglade">@timanglade</a> + <a href="https://twitter.com/snoopdave">@snoopdave</a> for Apache Usergrid.</p>
