GEODE-4063: Update trademarks on website
This commit addresses a number of issues in order to better align the
Apache Geode project website with ASF trademark policy. In particular,
it:

* Adds trademark symbols where necessary
* Replaces the site's introductory text with a single-sentence
description of Geode

This commit also:

* Removes seemingly deprecated code that was no longer rending GitHub
repository statistics
* Adds a link to the ASF privacy policy, as per ASF policy
* Updates the page title

Additional details at: https://www.apache.org/foundation/marks/

Signed-off-by: Bryan Behrenshausen <bryan.behrenshausen@sas.com>

--- a/website/content/index.html
+++ b/website/content/index.html
@@ -1,5 +1,5 @@
 ---
-title: Performance is key. Consistency is a must.
+title: Apache Geode™: Providing low latency, high concurrency data management solutions since 2002
 ---
 <!-- Licensed to the Apache Software Foundation (ASF) under one
 or more contributor license agreements.  See the NOTICE file
@@ -23,24 +23,13 @@ under the License. -->
         <div class="container">
             <img class="logo-title img-responsive hidden-xs" src="img/Apache_Geode_logo.png" />
             <div class="text-container">
-                <h2 class="tagline"><em>Performance</em> is key. <em>Consistency</em> is a must.</h2>
-                <p class="description">Providing low latency, high concurrency data management solutions since 2002.</p>
-                <p class="description">Build high-speed, data-intensive applications that elastically meet performance requirements at any scale.</p>
-				<p class="description">Take advantage of Apache Geode's unique technology that blends advanced techniques for data replication, partitioning and distributed processing.</p>
-				<p class="description">Apache Geode provides a database-like consistency model, reliable transaction processing, and a shared-nothing architecture to maintain very low latency performance with high concurrency processing.</p>
+                <p class="description">Apache Geode™ is a data management platform that provides real-time, consistent access to data-intensive applications throughout widely distributed cloud architectures.</p>
             </div>
-
-            <div class="btn-wrapper">
-              <p><a href="/releases/" class="btn btn-inverse btn-lg">Download Geode</a> &nbsp;</p> 
-              <!-- Place this tag where you want the button to render. -->
-              <a class="github-button" href="https://github.com/apache/geode" data-icon="octicon-star" data-style="mega" data-count-href="/apache/geode/stargazers" data-count-api="/repos/apache/geode#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star apache/geode on GitHub">Star</a>
-              <a class="github-button" href="https://github.com/apache/geode/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/apache/geode/network" data-count-api="/repos/apache/geode#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork apache/geode on GitHub">Fork</a>
-              <a class="github-button" href="https://github.com/apache/geode" data-icon="octicon-eye" data-style="mega" data-count-href="/apache/geode/watchers" data-count-api="/repos/apache/geode#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch apache/geode on GitHub">Watch</a>
-
-
-            </div>
-        </div>
-    </div>
+              <div class="btn-wrapper">
+                <p><a href="/releases/" class="btn btn-inverse btn-lg">Get Geode</a></p> 
+              </div>
+        	</div>
+    	</div>
 </section>
 
 <section class="bf-features">
@@ -150,7 +139,7 @@ under the License. -->
         <div class="row">
             <div class="col-md-12 text-left">
                 <h2>About the Project</h2>
-<p>Apache Geode is a data management platform that provides real-time, consistent access to data-intensive applications throughout widely distributed cloud architectures.</p>
+<p>Apache Geode™ is a data management platform that provides real-time, consistent access to data-intensive applications throughout widely distributed cloud architectures.</p>
 
 <p>Geode pools memory, CPU, network resources, and optionally local disk across multiple processes
 to manage application objects and behavior. It uses dynamic replication and data partitioning
