Add section heading
This commit add a section heading, "Key Features," to introduce the site
section devoted to Geode's most noteworthy and useful features.

Signed-off-by: Bryan Behrenshausen <bryan.behrenshausen@sas.com>

--- a/website/content/index.html
+++ b/website/content/index.html
@@ -33,6 +33,7 @@ under the License. -->
 </section>
 
 <section class="bf-features">
+	<h2>Key features</h2>
     <div class="container">
         <div class="row">
             <div class="col-md-4">
